added streamlit modelinspector

--- a/syntheticdatageneration/datasynthesizer/test_data_synthesizer.ipynb
+++ b/syntheticdatageneration/datasynthesizer/test_data_synthesizer.ipynb
@@ -42,38 +42,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "   \n",
+    "# Opening JSON file\n",
+    "f = open('/data/datafiles/dataset_configuration.json',)\n",
     "\n",
-    "input_data_files = [{\n",
-    "    \"input_file_path\":\"/data/datafiles/yelp_academic_dataset_business_transformed.CSV\"\n",
-    "    ,\"candidate_keys\": [\"business_id\",\"name\"]\n",
-    "    ,\"foreign_keys\": []\n",
-    "    ,\"drop_columns\": [\"hours\",\"hours.Monday\",\"hours.Tuesday\",\"hours.Wednesday\",\"hours.Thursday\",\"hours.Friday\",\"hours.Saturday\",\"hours.Sunday\"\n",
-    "    ,\"postal_code\",\"attributes.ByAppointmentOnly\",\"attributes.BusinessAcceptsCreditCards\",\"attributes.BikeParking\",\"attributes.RestaurantsPriceRange2\",\"attributes.CoatCheck\",\"attributes.RestaurantsTakeOut\",\"attributes.RestaurantsDelivery\",\"attributes.Caters\",\"attributes.WiFi\",\"attributes.BusinessParking.garage\",\"attributes.BusinessParking.street\",\"attributes.BusinessParking.validated\",\"attributes.BusinessParking.lot\",\"attributes.BusinessParking.valet\",\"attributes.WheelchairAccessible\",\"attributes.HappyHour\",\"attributes.OutdoorSeating\",\"attributes.HasTV\",\"attributes.RestaurantsReservations\",\"attributes.DogsAllowed\",\"attributes.Alcohol\",\"attributes.GoodForKids\",\"attributes.RestaurantsAttire\",\"attributes.RestaurantsTableService\",\"attributes.RestaurantsGoodForGroups\",\"attributes.DriveThru\",\"attributes.NoiseLevel\",\"attributes.Ambience.romantic\",\"attributes.Ambience.intimate\",\"attributes.Ambience.touristy\",\"attributes.Ambience.hipster\",\"attributes.Ambience.divey\",\"attributes.Ambience.classy\",\"attributes.Ambience.trendy\",\"attributes.Ambience.upscale\",\"attributes.Ambience.casual\",\"attributes.GoodForMeal.dessert\",\"attributes.GoodForMeal.latenight\",\"attributes.GoodForMeal.lunch\",\"attributes.GoodForMeal.dinner\",\"attributes.GoodForMeal.brunch\",\"attributes.GoodForMeal.breakfast\",\"attributes.BusinessAcceptsBitcoin\",\"attributes.Smoking\",\"attributes.Music.dj\",\"attributes.Music.background_music\",\"attributes.Music.no_music\",\"attributes.Music.jukebox\",\"attributes.Music.live\",\"attributes.Music.video\",\"attributes.Music.karaoke\",\"attributes.GoodForDancing\",\"attributes.AcceptsInsurance\",\"attributes.BestNights.monday\",\"attributes.BestNights.tuesday\",\"attributes.BestNights.friday\",\"attributes.BestNights.wednesday\",\"attributes.BestNights.thursday\",\"attributes.BestNights.sunday\",\"attributes.BestNights.saturday\",\"attributes.BYOB\",\"attributes.Corkage\",\"attributes.BYOBCorkage\",\"attributes.HairSpecializesIn.straightperms\",\"attributes.HairSpecializesIn.coloring\",\"attributes.HairSpecializesIn.extensions\",\"attributes.HairSpecializesIn.africanamerican\",\"attributes.HairSpecializesIn.curly\",\"attributes.HairSpecializesIn.kids\",\"attributes.HairSpecializesIn.perms\",\"attributes.HairSpecializesIn.asian\",\"attributes.Open24Hours\",\"attributes.RestaurantsCounterService\",\"attributes.AgesAllowed\",\"attributes.DietaryRestrictions.dairy-free\",\"attributes.DietaryRestrictions.gluten-free\",\"attributes.DietaryRestrictions.vegan\",\"attributes.DietaryRestrictions.kosher\",\"attributes.DietaryRestrictions.halal\",\"attributes.DietaryRestrictions.soy-free\",\"attributes.DietaryRestrictions.vegetarian\"\n",
-    "    ,\"address\",\"state\",\"latitude\",\"longitude\",\"categories5\",\"categories6\",\"categories7\",\"categories8\",\"categories9\",\"categories10\",\"categories11\",\"categories12\",\"categories13\",\"categories14\",\"categories15\",\"categories16\",\"categories17\",\"categories18\",\"categories19\",\"categories20\",\"categories21\",\"categories22\"\n",
-    "    ]\n",
-    "},\n",
-    "{\n",
-    "    \"input_file_path\":\"/data/datafiles/yelp_academic_dataset_review_transformed.CSV\"\n",
-    "    ,\"candidate_keys\": [\"business_id\"]\n",
-    "    ,\"foreign_keys\": [{\n",
-    "        \"foreign_key\": \"business_id\"\n",
-    "        ,\"reference_file\": \"/data/datafiles/yelp_academic_dataset_business_transformed.CSV\"\n",
-    "        ,\"reference_key\": \"business_id\"\n",
-    "    }]\n",
-    "    ,\"drop_columns\": [\"text\"]\n",
-    "},\n",
-    "{\n",
-    "    \"input_file_path\":\"/data/datafiles/yelp_academic_dataset_user_transformed.CSV\"\n",
-    "    ,\"candidate_keys\": [\"user_id\"]\n",
-    "    ,\"foreign_keys\": [{\n",
-    "        \"foreign_key\": \"user_id\"\n",
-    "        ,\"reference_file\": \"/data/datafiles/yelp_academic_dataset_review_transformed.CSV\"\n",
-    "        ,\"reference_key\": \"user_id\"\n",
-    "    }]\n",
-    "    ,\"drop_columns\": [\"useful\",\"funny\",\"cool\",\"elite\",\"friends\",\"fans\",\"average_stars\",\"compliment_hot\",\"compliment_more\",\"compliment_profile\",\"compliment_cute\",\"compliment_list\",\"compliment_note\",\"compliment_plain\",\"compliment_cool\",\"compliment_funny\",\"compliment_writer\",\"compliment_photos\"]\n",
-    "}]\n",
+    "input_data_files = json.load(f)\n",
     "\n",
-    "\n",
+    "f.close()\n",
     "# A filter of number of Rows, use this when you want to filter a number of rows \n",
     "# in a big dataset in order to use the Data Synthesizer Frontend. Use 0 if you want to retrieve all rows\n",
     "numberOfRowsFilter = 20000\n",
@@ -191,9 +167,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "{'city': True, 'stars': True, 'review_count': True, 'is_open': True, 'categories0': True, 'categories1': True, 'categories2': True, 'categories3': True, 'categories4': True}\n",
+      "/data/datafiles/yelp_academic_dataset_business_transformed_filtered.csv\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "save_synthetic_data() got an unexpected keyword argument 'seed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[81], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m generator: DataGenerator \u001b[39m=\u001b[39m DataGenerator()\n\u001b[1;32m     28\u001b[0m generator\u001b[39m.\u001b[39mgenerate_dataset_in_independent_mode(num_tuples_to_generate, filtered_data_file[\u001b[39m'\u001b[39m\u001b[39mdescription_file_path\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m---> 29\u001b[0m generator\u001b[39m.\u001b[39;49msave_synthetic_data(filtered_data_file[\u001b[39m'\u001b[39;49m\u001b[39msynthetic_file_path\u001b[39;49m\u001b[39m'\u001b[39;49m],seed\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: save_synthetic_data() got an unexpected keyword argument 'seed'"
+     ]
+    }
+   ],
    "source": [
     "for filtered_data_file in filtered_output_files:\n",
     "        filteredDf: pd.DataFrame = pd.read_csv(filepath_or_buffer=filtered_data_file['filtered_output_path']\n",
@@ -293,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Dec  8 2022, 03:38:40) \n[GCC 8.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
