--- a/syntheticdatageneration/faker/test_faker.ipynb
+++ b/syntheticdatageneration/faker/test_faker.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,74 +114,90 @@
      "output_type": "stream",
      "text": [
       "              business_id                      name            city  stars  \\\n",
-      "0  mWMc6_wTdE0EUBKIGXDVfA            Sonic Drive-In    Ashland City    1.0   \n",
-      "1  n_0UpQx1hsNbnPUSlodU8w  Abby Rappoport, LAC, CMQ          Affton    4.5   \n",
-      "2  bBDDEgkFA1Otx9Lfe7BZUQ  Perkiomen Valley Brewery   Land O' Lakes    1.5   \n",
-      "3  tUFrWirKiKi_TAnsVWINQQ            Temple Beth-El      Green Lane    1.5   \n",
-      "4  MTSW4McQd7CbVtyjqoe9mw        St Honore Pastries    Ashland City    2.0   \n",
-      "5  MTSW4McQd7CbVtyjqoe9mw                 Marshalls  St. Petersburg    4.5   \n",
-      "6  k0hlBqXX-Bt0vf1op7Jr1w  Abby Rappoport, LAC, CMQ          Affton    1.5   \n",
-      "7  tUFrWirKiKi_TAnsVWINQQ     Tsevi's Pub And Grill       Brentwood    5.0   \n",
-      "8  qkRM_2X51Yqxk3btlwAQIg                    Target       Nashville    1.0   \n",
-      "9  qkRM_2X51Yqxk3btlwAQIg            Temple Beth-El          Tucson    2.0   \n",
+      "0  qkRM_2X51Yqxk3btlwAQIg  Perkiomen Valley Brewery       Nashville    3.0   \n",
+      "1  qkRM_2X51Yqxk3btlwAQIg        St Honore Pastries  St. Petersburg    2.0   \n",
+      "2  CF33F8-E6oudUQ46HnavjQ                    Target  St. Petersburg    4.0   \n",
+      "3  qkRM_2X51Yqxk3btlwAQIg     Tsevi's Pub And Grill      Green Lane    1.5   \n",
+      "4  k0hlBqXX-Bt0vf1op7Jr1w            Sonic Drive-In      Green Lane    5.0   \n",
+      "5  mWMc6_wTdE0EUBKIGXDVfA  Abby Rappoport, LAC, CMQ          Tucson    5.0   \n",
+      "6  mWMc6_wTdE0EUBKIGXDVfA            Sonic Drive-In   Land O' Lakes    3.5   \n",
+      "7  Pns2l4eNsfO8kk83dixA6A        St Honore Pastries    Ashland City    3.5   \n",
+      "8  mWMc6_wTdE0EUBKIGXDVfA            Sonic Drive-In   Land O' Lakes    4.5   \n",
+      "9  mWMc6_wTdE0EUBKIGXDVfA                    Target    Philadelphia    3.0   \n",
       "\n",
-      "   review_count  is_open       categories0   categories1  \\\n",
-      "0            28        0           Doctors   Restaurants   \n",
-      "1            22        0           Doctors     Fast Food   \n",
-      "2            80        1        Synagogues     Breweries   \n",
-      "3            10        1    Sporting Goods     Fast Food   \n",
-      "4             6        0              Pubs     Fast Food   \n",
-      "5            28        1           Doctors     Fast Food   \n",
-      "6             7        1  Shipping Centers       Fashion   \n",
-      "7             7        1       Restaurants      Shopping   \n",
-      "8            80        1           Doctors      Dentists   \n",
-      "9            10        1    Sporting Goods     Fast Food   \n",
+      "   review_count  is_open                categories0  \\\n",
+      "0             5        0  Ice Cream & Frozen Yogurt   \n",
+      "1            80        1          Department Stores   \n",
+      "2             6        0                Restaurants   \n",
+      "3            13        1                 Synagogues   \n",
+      "4            15        0                       Pubs   \n",
+      "5            19        1                 Synagogues   \n",
+      "6            15        0                 Synagogues   \n",
+      "7            13        1                    Doctors   \n",
+      "8            80        0                 Synagogues   \n",
+      "9            22        1                   Brewpubs   \n",
       "\n",
-      "              categories2     categories3                 categories4  \n",
-      "0                Notaries     Food Trucks                 Restaurants  \n",
-      "1                Notaries   Home & Garden                 Electronics  \n",
-      "2   Naturopathic/Holistic        Shopping   Ice Cream & Frozen Yogurt  \n",
-      "3   Naturopathic/Holistic            Food      American (Traditional)  \n",
-      "4             Shoe Stores    Coffee & Tea                 Restaurants  \n",
-      "5   Naturopathic/Holistic             NaN                 Electronics  \n",
-      "6              Bubble Tea     Food Trucks                        Food  \n",
-      "7             Shoe Stores     Acupuncture                 Restaurants  \n",
-      "8              Sandwiches    Coffee & Tea            Health & Medical  \n",
-      "9                Notaries     Acupuncture                        Food  \n",
+      "                     categories1             categories2       categories3  \\\n",
+      "0                    Restaurants                 Italian              Bars   \n",
+      "1                      Breweries                    Food   Mailbox Centers   \n",
+      "2                 Local Services                 Fashion     Home & Garden   \n",
+      "3                    Restaurants                     NaN      Coffee & Tea   \n",
+      "4        Religious Organizations             Shoe Stores              Bars   \n",
+      "5                      Breweries                     NaN              Food   \n",
+      "6                    Restaurants             Shoe Stores       Acupuncture   \n",
+      "7   Traditional Chinese Medicine   Naturopathic/Holistic               NaN   \n",
+      "8                      Breweries                 Italian              Bars   \n",
+      "9                 Local Services                 Italian          Shopping   \n",
+      "\n",
+      "                  categories4  \n",
+      "0      American (Traditional)  \n",
+      "1                 Electronics  \n",
+      "2                 Electronics  \n",
+      "3   Ice Cream & Frozen Yogurt  \n",
+      "4                 Restaurants  \n",
+      "5                 Restaurants  \n",
+      "6            Health & Medical  \n",
+      "7            Health & Medical  \n",
+      "8   Ice Cream & Frozen Yogurt  \n",
+      "9                         NaN  \n",
       "                review_id                 user_id             business_id  \\\n",
-      "0  _ZeMknuYdlQcUqng_Im3yg  yfFzsLmaWF2d4Sr0UNbBgg  YjUWPpI6HXG530lwP-fb2A   \n",
-      "1  ZKvDG2sBvHVdF5oBNUOpAQ  bcjbaE6dDog4jkNY91ncLQ  XQfwVwDr-v0ZS3_CbbE5Xw   \n",
-      "2  JrIxlS1TzJ-iCu79ul40cQ  eUta8W_HdHMXPzLBBZhL1A  kxX2SOes4o-D3ZQBkiMRfA   \n",
-      "3  6AxgBCNX_PNTOxmbRSwcKQ  OyoGAe7OKpv6SyGZT5g77Q  B5XSoSG3SfvQGtKEGQ1tSQ   \n",
-      "4  pUycOfUwM8vqX7KjRRhUEA  yfFzsLmaWF2d4Sr0UNbBgg  LHSTtnW3YHCeUkRDGyJOyw   \n",
-      "5  AqPFMleE6RsU23_auESxiA  59MxRhNVhU9MYndMkz0wtw  LHSTtnW3YHCeUkRDGyJOyw   \n",
-      "6  JrIxlS1TzJ-iCu79ul40cQ  r3zeYsv1XFBRA4dJpL78cw  gmjsEdUsKpj9Xxu6pdjH0g   \n",
-      "7  JrIxlS1TzJ-iCu79ul40cQ  OyoGAe7OKpv6SyGZT5g77Q  7ATYjTIgM3jUlt4UM3IypQ   \n",
-      "8  _ZeMknuYdlQcUqng_Im3yg  eUta8W_HdHMXPzLBBZhL1A  LHSTtnW3YHCeUkRDGyJOyw   \n",
-      "9  Sx8TMOWLNuJBWer-0pcmoA  r3zeYsv1XFBRA4dJpL78cw  YjUWPpI6HXG530lwP-fb2A   \n",
+      "0  AqPFMleE6RsU23_auESxiA  8g_iMtfSiwikVnbP2etR0A  gmjsEdUsKpj9Xxu6pdjH0g   \n",
+      "1  KU_O5udG6zpxOg-VcAEodg  _7bHUi9Uuf5__HHc_Q8guQ  e4Vwtrqf-wpJfwesgvdgxQ   \n",
+      "2  BiTunyQ73aT9WBnpR9DZGw  bcjbaE6dDog4jkNY91ncLQ  04UD14gamNjLY0IDYVhHJg   \n",
+      "3  JrIxlS1TzJ-iCu79ul40cQ  _7bHUi9Uuf5__HHc_Q8guQ  7ATYjTIgM3jUlt4UM3IypQ   \n",
+      "4  _ZeMknuYdlQcUqng_Im3yg  wSTuiTk-sKNdcFyprzZAjg  e4Vwtrqf-wpJfwesgvdgxQ   \n",
+      "5  _ZeMknuYdlQcUqng_Im3yg  59MxRhNVhU9MYndMkz0wtw  XQfwVwDr-v0ZS3_CbbE5Xw   \n",
+      "6  KU_O5udG6zpxOg-VcAEodg  59MxRhNVhU9MYndMkz0wtw  04UD14gamNjLY0IDYVhHJg   \n",
+      "7  saUsX_uimxRlCVr67Z4Jig  r3zeYsv1XFBRA4dJpL78cw  04UD14gamNjLY0IDYVhHJg   \n",
+      "8  KU_O5udG6zpxOg-VcAEodg  _7bHUi9Uuf5__HHc_Q8guQ  kxX2SOes4o-D3ZQBkiMRfA   \n",
+      "9  pUycOfUwM8vqX7KjRRhUEA  59MxRhNVhU9MYndMkz0wtw  e4Vwtrqf-wpJfwesgvdgxQ   \n",
       "\n",
       "   stars  useful  funny  cool           date  \n",
-      "0      5      15      6     2  1438914556000  \n",
-      "1      1       1      1     9  1420329663000  \n",
-      "2      2       4      9     5  1484427255000  \n",
-      "3      1      15      9     8  1391632230000  \n",
-      "4      3       7      4     7  1459377993000  \n",
-      "5      3       1      6     1  1391632230000  \n",
-      "6      2       1      6     4  1469431866000  \n",
-      "7      5       7      0     9  1531001351000  \n",
-      "8      1       1      3     1  1420329663000  \n",
-      "9      1       7      6     7  1443049831000  \n",
-      "                  user_id     name  review_count        yelping_since\n",
-      "0  j14WgRoU_-2ZE1aw1dXrJg  Ronskee           133  2010-01-07 18:32:04\n",
-      "1  VcLRGCG_VbAo8MxOm76jzA     John           348  2008-12-11 22:11:56\n"
+      "0      1       1      4     9  1531001351000  \n",
+      "1      3       7     12     6  1391632230000  \n",
+      "2      4       5      1     8  1420327278000  \n",
+      "3      1       7      2     9  1459377993000  \n",
+      "4      1       4      4     7  1469431866000  \n",
+      "5      1       4     12     6  1391632230000  \n",
+      "6      4      14      4     3  1325604498000  \n",
+      "7      2       2     12     1  1391632230000  \n",
+      "8      2       4      9     2  1459377993000  \n",
+      "9      3       0      2     8  1443049831000  \n",
+      "                  user_id         name  review_count        yelping_since\n",
+      "0  j14WgRoU_-2ZE1aw1dXrJg         John           133  2009-07-11 16:47:38\n",
+      "1  wAw9FHMiOZd9ROoc5x4DpQ  Joz Joz Joz           358  2006-03-03 08:10:12\n"
      ]
     }
    ],
    "source": [
     "#generate a new dataframe with structure of source file\n",
-    "fake_df_business = gen_df_dict(fake_dict_business, 10)\n",
+    "fake_df_business = gen_df_dict(fake_dict_business, 10000)\n",
     "fake_df_review = gen_df_dict(fake_dict_review, 10)\n",
     "fake_df_user = gen_df_dict(fake_dict_user, 2)\n",
+    "\n",
+    "fake_df_business.to_csv('../../data/datafiles/out/faker/yelp_academic_dataset_business_transformed_synthetic.csv')\n",
+    "fake_df_review.to_csv('../../data/datafiles/out/faker/yelp_academic_dataset_review_transformed_synthetic.csv')\n",
+    "fake_df_user.to_csv('../../data/datafiles/out/faker/yelp_academic_dataset_user_transformed_synthetic.csv')\n",
     "\n",
     "#print generated fake data\n",
     "print (fake_df_business)\n",
