updated faker example

--- a/syntheticdatageneration/faker/test_faker.ipynb
+++ b/syntheticdatageneration/faker/test_faker.ipynb
@@ -91,9 +91,9 @@
     "\n",
     "#generate dictionary based on structure of dataframe\n",
     "#each column will be assigned to a fake function\n",
-    "fake_dict_business = df_to_fake_dict(df_business, fake, 10)\n",
-    "fake_dict_review = df_to_fake_dict(df_review, fake, 10)\n",
-    "fake_dict_user = df_to_fake_dict(df_user, fake.unique, 10)"
+    "fake_dict_business = df_to_fake_dict(df_business, fake, 1000)\n",
+    "fake_dict_review = df_to_fake_dict(df_review, fake, 1000)\n",
+    "fake_dict_user = df_to_fake_dict(df_user, fake.unique, 1000)"
    ]
   },
   {
@@ -192,17 +192,21 @@
    "source": [
     "#generate a new dataframe with structure of source file\n",
     "fake_df_business = gen_df_dict(fake_dict_business, 10000)\n",
-    "fake_df_review = gen_df_dict(fake_dict_review, 10)\n",
-    "fake_df_user = gen_df_dict(fake_dict_user, 2)\n",
+    "fake_df_review = gen_df_dict(fake_dict_review, 10000)\n",
+    "fake_df_user = gen_df_dict(fake_dict_user, 10)\n",
+    "\n",
+    "fake_df_business = fake_df_business.set_index(\"business_id\")\n",
+    "fake_df_review = fake_df_review.set_index(\"review_id\")\n",
+    "fake_df_user = fake_df_user.set_index(\"user_id\")\n",
     "\n",
     "fake_df_business.to_csv('../../data/datafiles/out/faker/yelp_academic_dataset_business_transformed_synthetic.csv')\n",
     "fake_df_review.to_csv('../../data/datafiles/out/faker/yelp_academic_dataset_review_transformed_synthetic.csv')\n",
     "fake_df_user.to_csv('../../data/datafiles/out/faker/yelp_academic_dataset_user_transformed_synthetic.csv')\n",
     "\n",
     "#print generated fake data\n",
-    "print (fake_df_business)\n",
-    "print (fake_df_review)\n",
-    "print (fake_df_user)"
+    "print (fake_df_business.head())\n",
+    "print (fake_df_review.head())\n",
+    "print (fake_df_user.head())"
    ]
   }
  ],
