updated trumania example

--- a/syntheticdatageneration/trumania/test_trumania.ipynb
+++ b/syntheticdatageneration/trumania/test_trumania.ipynb
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "<trumania.core.attribute.Attribute at 0x7fce83e84850>"
+       "<trumania.core.attribute.Attribute at 0x7f7fcf8f2820>"
       ]
      },
      "execution_count": 3,
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<trumania.core.attribute.Attribute at 0x7fce83e67670>"
+       "<trumania.core.attribute.Attribute at 0x7f7f98e4cfd0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,19 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Cannot add story review_visit: another story with identical name is already in the circus",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# define a story that is initiated by a population.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# in this case a review is initiated by a 'person'.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m review_visit \u001b[39m=\u001b[39m example_circus\u001b[39m.\u001b[39;49mcreate_story(\n\u001b[1;32m      4\u001b[0m     name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mreview_visit\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m     initiating_population\u001b[39m=\u001b[39;49mexample_circus\u001b[39m.\u001b[39;49mpopulations[\u001b[39m\"\u001b[39;49m\u001b[39mperson\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[1;32m      6\u001b[0m     member_id_field\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39muser_id\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      7\u001b[0m     timer_gen\u001b[39m=\u001b[39;49mConstantDependentGenerator(value\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m     10\u001b[0m \u001b[39m# add an operation that will be executed at every clock step.\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m# in this case, create a review for a business by a person.\u001b[39;00m\n\u001b[1;32m     12\u001b[0m review_visit\u001b[39m.\u001b[39mset_operations(\n\u001b[1;32m     13\u001b[0m     \u001b[39m# generate an unique id for every review\u001b[39;00m\n\u001b[1;32m     14\u001b[0m     id_gen\u001b[39m.\u001b[39mops\u001b[39m.\u001b[39mgenerate(named_as\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mreview_id\u001b[39m\u001b[39m\"\u001b[39m),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     26\u001b[0m     operations\u001b[39m.\u001b[39mFieldLogger(log_id\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mreviews\u001b[39m\u001b[39m\"\u001b[39m, cols\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mreview_id\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39muser_id\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbusiness_id\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mstars\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39museful\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mfunny\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mcool\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m\"\u001b[39m ])\n\u001b[1;32m     27\u001b[0m  )\n",
-      "File \u001b[0;32m/trumania/trumania/core/circus.py:82\u001b[0m, in \u001b[0;36mCircus.create_story\u001b[0;34m(self, name, **story_params)\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[39mreturn\u001b[39;00m story\n\u001b[1;32m     81\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 82\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCannot add story \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m: another story with \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     83\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39midentical name is already in the circus\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(name))\n",
-      "\u001b[0;31mValueError\u001b[0m: Cannot add story review_visit: another story with identical name is already in the circus"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:story not found: review_visit\n",
+      "/trumania/trumania/core/story.py:50: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  self.forced_to_act_next = pd.Series()\n"
      ]
     }
    ],
@@ -174,9 +171,9 @@
     "    id_gen.ops.generate(named_as=\"review_id\"),\n",
     "    # pick a random business\n",
     "    example_circus.populations[\"business\"].ops.select_one(named_as=\"business_id\"),\n",
-    "    # generate a score between 0 and 5\n",
+    "    # generate a score between 0 and X\n",
     "    FakerGenerator(method=\"pyint\", min_value=0, max_value=5, seed=next(example_circus.seeder)).ops.generate(named_as=\"stars\"),\n",
-    "    FakerGenerator(method=\"pyint\", min_value=0, max_value=5, seed=next(example_circus.seeder)).ops.generate(named_as=\"useful\"),\n",
+    "    FakerGenerator(method=\"pyint\", min_value=0, max_value=9, seed=next(example_circus.seeder)).ops.generate(named_as=\"useful\"),\n",
     "    FakerGenerator(method=\"pyint\", min_value=0, max_value=5, seed=next(example_circus.seeder)).ops.generate(named_as=\"funny\"),                                                                                                            \n",
     "    FakerGenerator(method=\"pyint\", min_value=0, max_value=5, seed=next(example_circus.seeder)).ops.generate(named_as=\"cool\"),\n",
     "    # generate a timestamp between 2015 and 2023 (see https://www.unixtimestamp.com/)\n",
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
